find_package(rostest REQUIRED)

add_library(ros_pkg_template_main_rostest test_main.cpp)
target_link_libraries(ros_pkg_template_main_rostest PUBLIC catkin_pkg project_option gtest)

add_rostest(ros_pkg_template_test.test)
add_executable(ros_pkg_template_rostest ros_pkg_template_rostest.cpp)
target_link_libraries(ros_pkg_template_rostest PRIVATE ros_pkg_template_main_rostest)
